# Jardani

./: .env  .gitignore  README.md  pyproject.toml
jardani/: main.py
jardani/commands/: about.py  ai.py  lock.py  ping.py  self_timeout.py
