[project]
name = "jardani"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahum Maitra", email = "theahummaitra@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.7.1",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]
